# feup-cal

./: .gitignore  README.md
tp1/: CMakeLists.txt
tp1/src/: Change.cpp  Factorial.cpp  Factorial.h  Partitioning.cpp  Sum.cpp  Sum.h
tp1/test/: tests.cpp
tp2/: CMakeLists.txt
tp2/src/: Labirinth.cpp  Sudoku.cpp  Sudoku.h
tp2/test/: tests.cpp
tp3/: CMakeLists.txt
tp3/src/: NearestPoints.cpp  Point.cpp
tp3/test/: tests.cpp
tp4/: CMakeLists.txt
tp4/src/: Graph.h
tp4/test/: tests.cpp
tp5/: CMakeLists.txt
tp5/src/: Graph.h
tp5/test/: tests.cpp
tp6/: CMakeLists.txt  FichaJUNG.cpp
tp6/src/: animation.cpp  animation.h  util.cpp  util.h
tp7/: CMakeLists.txt
tp7/src/: Graph.h
tp7/test/: tests.cpp
tp8/: CMakeLists.txt  main.cpp
tp8/src/: Graph.h
tp8/test/: tests.cpp
